# rhino-gh-mcp

./: .gitattributes  .gitignore  .mcp.json  CHANGELOG.md  LICENSE  README.md  STATUS.md
docs/: architecture.md  generalization.md  getting-started.md  handoff.md  packaging-status.md  performance-notes.md  research-and-planning-notes.md  v0.2-redesign.md  v0.2-testing-checklist.md
examples/: capability_tour.py  smoke_test_bridge.py  smoke_test_rhino.py  verify_capability_gate.py  verify_widget_values.py
mcpb/: bootstrap.py  manifest.json  requirements.txt
plugins/: README.md
plugins/grasshopper/: README.md  RhinoGhMcp.csproj  RhinoGhMcp.sln  manifest.yml  reinstall.ps1  reinstall.sh
plugins/rhino/: README.md  RhinoGhMcpRhino.csproj  RhinoGhMcpRhino.sln  manifest.yml  reinstall.ps1  reinstall.sh
scripts/: build-mcpb.sh  build-yak.sh  sync.ps1  sync.sh
server/: README.md  pyproject.toml
server/src/rhino_gh_mcp/: __init__.py  __main__.py  capabilities.py  config.py  scenarios.py  server.py  skills.py  turns.py
server/src/rhino_gh_mcp/bridges/: __init__.py  grasshopper.py  rhino.py
server/src/rhino_gh_mcp/policies/: __init__.py  base.py
server/src/rhino_gh_mcp/tools/: __init__.py  _gate.py  gh_read.py  gh_script.py  gh_write.py  meta.py  multimodal.py  rhino_tools.py  v2_tools.py
server/tests/: test_gh_read_composables.py  test_scenarios.py  test_skills.py  test_skills_v2.py  test_smoke.py  test_turns.py
skills/: README.md
skills/_shared/: coach-system-prompt.md
skills/facade-design/: SKILL.md
skills/ladybug-environmental/: SKILL.md
(+51 files in other folders)
